--- a/stories/index.html
+++ b/stories/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
 <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-08-20 10:21 -->
+    <!-- Built with 11ty - 2024-08-20 10:51 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Stories Introduction | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/assets/css/style.css?ts=1724149268">
+    <link rel="stylesheet" href="/assets/css/style.css?ts=1724151082">
     <link rel="stylesheet" href="/assets/node_modules/leaflet/dist/leaflet.css"/>
     <link rel="stylesheet" href="/assets/node_modules/leaflet-dvf/dist/css/dvf.css"/>
-    <script src="/assets/js/navbar-toggle.js?ts=1724149268"></script>
+    <script src="/assets/js/navbar-toggle.js?ts=1724151082"></script>
 
     <style>
 
@@ -486,28 +486,28 @@
                            data-filtervalue='{"sub_type":4, "identity":[2]}'
                            class="explore_filter" id="checkbox1"/>
                     <label for="checkbox1">
-                        <img src="/assets/img/stories/circle_turquoise.webp" alt=""/><span>Settlements (Indigenous)</span>
+                        <img src="/assets/img/stories/cross_turquoise.webp" alt=""/><span>Settlements (Indigenous)</span>
                     </label>
                 </li>
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
                            data-filtervalue='{"sub_type":4, "identity":[1]}'
                            class="explore_filter" id="checkbox2"/>
                     <label for="checkbox2">
-                        <img src="/assets/img/stories/circle_purple.webp" alt=""/><span>Settlements (European)</span>
+                        <img src="/assets/img/stories/cross_purple.webp" alt=""/><span>Settlements (European)</span>
                     </label>
                 </li>
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
                            data-filtervalue='{"sub_type":10, "identity":[2]}'
                            class="explore_filter" id="checkbox3"/>
                     <label for="checkbox3">
-                        <img src="/assets/img/stories/cross_turquoise.webp" alt=""/><span>Placenames (Indigenous)</span>
+                        <img src="/assets/img/stories/circle_turquoise.webp" alt=""/><span>Placenames (Indigenous)</span>
                     </label>
                 </li>
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
                            data-filtervalue='{"sub_type":10, "identity":[1]}'
                            class="explore_filter" id="checkbox4"/>
                     <label for="checkbox4">
-                        <img src="/assets/img/stories/cross_purple.webp" alt=""/><span>Placenames (European)</span>
+                        <img src="/assets/img/stories/circle_purple.webp" alt=""/><span>Placenames (European)</span>
                     </label>
                 </li>
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
@@ -543,62 +543,62 @@
 
 <table>
   <tr>
-    <td>&nbsp;</td>
-    <td><img style="height: 1em;" src="/assets/img/stories/circle_turquoise.webp"></img></td>
+    <td>&nbsp;&nbsp;</td>
+    <td><img style="height: 1em;" src="/assets/img/stories/cross_turquoise.webp"></img></td>
     <td>Settlement (Indigenous)</td>
   </tr>
   <tr>
-    <td>&nbsp;</td>
-    <td><img style="height: 1em;" src="/assets/img/stories/circle_purple.webp"></img></td>
+    <td>&nbsp;&nbsp;</td>
+    <td><img style="height: 1em;" src="/assets/img/stories/cross_purple.webp"></img></td>
     <td>Settlement (European)</td>
   </tr>
   <tr>
-    <td>&nbsp;</td>
-    <td><img style="height: 1em;" src="/assets/img/stories/cross_turquoise.webp"></img></td>
+    <td>&nbsp;&nbsp;</td>
+    <td><img style="height: 1em;" src="/assets/img/stories/circle_turquoise.webp"></img></td>
     <td>Placename (Indigenous)</td>
   </tr>
   <tr>
-    <td>&nbsp;</td>
-    <td><img style="height: 1em;" src="/assets/img/stories/cross_purple.webp"></img></td>
+    <td>&nbsp;&nbsp;</td>
+    <td><img style="height: 1em;" src="/assets/img/stories/circle_purple.webp"></img></td>
     <td>Placename (European)</td>
   </tr>
   <tr>
-    <td>&nbsp;</td>
+    <td>&nbsp;&nbsp;</td>
     <td><img style="height: 1em;opacity:0.3;" src="/assets/img/stories/region_turquoise.webp"></img></td>
     <td>Annotation (Indigenous-related)</td>
   </tr>
   <tr>
-    <td>&nbsp;</td>
+    <td>&nbsp;&nbsp;</td>
     <td><img style="height: 1em;" src="/assets/img/stories/haudenosaunee-hatch-30-pc-fill-turquoise.webp"></img></td>
     <td>Annotation (Haudenosaunee-related)</td>
   </tr>
   <tr>
-    <td>&nbsp;</td>
+    <td>&nbsp;&nbsp;</td>
     <td><img style="height: 1em;" src="/assets/img/stories/diagonal_hatching_purple.webp"></img></td>
     <td>Annotation (European-related)</td>
   </tr>
   <tr>
-    <td>&nbsp;</td>
+    <td>&nbsp;&nbsp;</td>
     <td><img style="height: 1em;opacity:0.3" src="/assets/img/stories/region_purple.webp"></img></td>
     <td>Colonial domain</td>
   </tr>
   <tr>
-    <td>&nbsp;</td>
+    <td>&nbsp;&nbsp;</td>
     <td><img style="height: 1em;" src="/assets/img/stories/principal_rivers.webp"></img></td>
     <td>River</td>
   </tr>
   <tr>
-    <td>&nbsp;</td>
+    <td>&nbsp;&nbsp;</td>
     <td><img style="height: 1em;" src="/assets/img/stories/pathways.webp"></img></td>
     <td>Pathway</td>
   </tr>
   <tr>
-    <td>&nbsp;</td>
+    <td>&nbsp;&nbsp;</td>
     <td><img style="height: 1em;" src="/assets/img/stories/boundary.webp"></img></td>
     <td>Boundary</td>
   </tr>
   <tr>
-    <td>&nbsp;</td>
+    <td>&nbsp;&nbsp;</td>
     <td><img style="height: 1em;" src="/assets/img/stories/council-fire.webp"></img></td>
     <td>Council fire</td>
   </tr>
