--- a/stories/index.html
+++ b/stories/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
 <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-08-28 09:39 -->
+    <!-- Built with 11ty - 2024-08-28 13:47 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Stories Introduction | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/assets/css/style.css?ts=1724837960">
+    <link rel="stylesheet" href="/assets/css/style.css?ts=1724852880">
     <link rel="stylesheet" href="/assets/node_modules/leaflet/dist/leaflet.css"/>
     <link rel="stylesheet" href="/assets/node_modules/leaflet-dvf/dist/css/dvf.css"/>
-    <script src="/assets/js/navbar-toggle.js?ts=1724837960"></script>
+    <script src="/assets/js/navbar-toggle.js?ts=1724852880"></script>
 
     <style>
 
@@ -522,6 +522,13 @@
                            class="explore_filter" id="checkbox6"/>
                     <label for="checkbox6">
                         <img src="/assets/img/stories/principal_rivers.webp" alt=""/><span>Rivers</span>
+                    </label>
+                </li>
+                <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
+                           data-filtervalue='{"sub_type":7, "identity":[0]}'
+                           class="explore_filter" id="checkbox7"/>
+                    <label for="checkbox7">
+                        <img src="/assets/img/stories/vertical_hatch_grey_8C8C8C.webp" alt=""/><span>Descriptions</span>
                     </label>
                 </li>
             </ol>
