--- a/stories/index.html
+++ b/stories/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
 <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-08-28 13:47 -->
+    <!-- Built with 11ty - 2024-08-29 06:30 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Stories Introduction | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/assets/css/style.css?ts=1724852880">
+    <link rel="stylesheet" href="/assets/css/style.css?ts=1724913043">
     <link rel="stylesheet" href="/assets/node_modules/leaflet/dist/leaflet.css"/>
     <link rel="stylesheet" href="/assets/node_modules/leaflet-dvf/dist/css/dvf.css"/>
-    <script src="/assets/js/navbar-toggle.js?ts=1724852880"></script>
+    <script src="/assets/js/navbar-toggle.js?ts=1724913043"></script>
 
     <style>
 
@@ -525,10 +525,38 @@
                     </label>
                 </li>
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
-                           data-filtervalue='{"sub_type":7, "identity":[0]}'
+                           data-filtervalue='{"sub_type":11, "identity":[3]}'
                            class="explore_filter" id="checkbox7"/>
                     <label for="checkbox7">
-                        <img src="/assets/img/stories/vertical_hatch_grey_8C8C8C.webp" alt=""/><span>Descriptions</span>
+                        <img src="/assets/img/stories/diagonal-hatch-green-427D67.webp" alt=""/><span>Haudenosaunee related</span>
+                    </label>
+                </li>
+                <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
+                           data-filtervalue='{"sub_type":11, "identity":[2]}'
+                           class="explore_filter" id="checkbox8"/>
+                    <label for="checkbox8">
+                        <img src="/assets/img/stories/region_turquoise.webp" alt=""/><span>Other indigenous related</span>
+                    </label>
+                </li>
+                <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
+                           data-filtervalue='{"sub_type":11, "identity":[1]}'
+                           class="explore_filter" id="checkbox9"/>
+                    <label for="checkbox9">
+                        <img src="/assets/img/stories/diagonal_hatching_purple.webp" alt=""/><span>European related</span>
+                    </label>
+                </li>
+                <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
+                           data-filtervalue='{"sub_type":14, "identity":[1]}'
+                           class="explore_filter" id="checkbox10"/>
+                    <label for="checkbox10">
+                        <img src="/assets/img/stories/region_purple.webp" alt=""/><span>Colonial domain</span>
+                    </label>
+                </li>
+                <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
+                           data-filtervalue='{"sub_type":7, "identity":[0]}'
+                           class="explore_filter" id="checkbox11"/>
+                    <label for="checkbox11">
+                        <img src="/assets/img/stories/vertical_hatch_grey_8C8C8C.webp" alt=""/><span>Description</span>
                     </label>
                 </li>
             </ol>
